Stage 3/4: Save a text file